202100708 - data fully loaded

--- a/pittsburgh_re_api_pull.ipynb
+++ b/pittsburgh_re_api_pull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,44 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(r'C:\\Users\\henry\\OneDrive\\Documents\\real_estate\\scripts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#2021 Alleghency county parcel data\n",
-    "#parcels = r'https://data.wprdc.org/dataset/2b3df818-601e-4f06-b150-643557229491/resource/f2b8d575-e256-4718-94ad-1e12239ddb92/download/assessments.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#all_cty_pc = pd.read_csv(parcels,dtype=str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#all_cty_pc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,48 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#already loaded this to mysql database\n",
-    "#all_cty_pc.to_sql('allegheny_cty_parcels_2021',if_exists='append',index=False,con=engine,chunksize=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create index on parcel id\n",
-    "#with engine.connect() as con:\n",
-    "#    con.execute('ALTER TABLE allegheny_cty_parcels_2021 ADD INDEX PARID USING BTREE (PARID(17)) VISIBLE;')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len('P0126L00250000000')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,18 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "92493"
       ]
      },
-     "execution_count": 53,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 34
     }
    ],
    "source": [
@@ -261,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,18 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "46455"
+       "103855"
       ]
      },
-     "execution_count": 55,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 36
     }
    ],
    "source": [
@@ -299,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,18 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "57404"
+       "4"
       ]
      },
-     "execution_count": 57,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 38
     }
    ],
    "source": [
@@ -328,27 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0317H00060002300'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parcel_final[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#test api call to be used if needed\n",
+    "\n",
     "api_call = 'http://tools.wprdc.org/property-api/v0/parcels/0317H00060002300'\n",
     "parceldata = requests.get(str(api_call)).json()"
    ]
@@ -513,9 +417,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('henry': virtualenv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -528,6 +431,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "interpreter": {
+   "hash": "a4bd76f36fa07c92d423ad5d1d2cbe0ac2e2f53edb5b0446e053ad16aa699156"
   }
  },
  "nbformat": 4,
