--- a/pittsburgh_re_api_pull.ipynb
+++ b/pittsburgh_re_api_pull.ipynb
@@ -3,293 +3,290 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "import os\r\n",
-    "import pandas as pd\r\n",
-    "import sqlalchemy\r\n",
-    "import seaborn as sns\r\n",
-    "import requests\r\n",
-    "import json"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import sqlalchemy\n",
+    "import seaborn as sns\n",
+    "import requests\n",
+    "import json"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "source": [
-    "#connection to the open payments in data in mysql\r\n",
-    "constr = 'mysql+mysqlconnector://root:mysqlroot@localhost:3306/pbgh_property'\r\n",
-    "engine = sqlalchemy.create_engine(constr,echo=False)"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#connection to the open payments in data in mysql\n",
+    "constr = 'mysql+mysqlconnector://root:mysqlroot@localhost:3306/pbgh_property'\n",
+    "engine = sqlalchemy.create_engine(constr,echo=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "class pb_parcel_parser:\r\n",
-    "    '''\r\n",
-    "    Class that parses parcel data obtained from the Western Pennsylvania Data Center API\r\n",
-    "    http://tools.wprdc.org/property-api/\r\n",
-    "    \r\n",
-    "    This class will parse the data received in json format and load to a local mysql db.  \r\n",
-    "    '''    \r\n",
-    "    \r\n",
-    "    def __init__(self,parcel):\r\n",
-    "        #initialize with the parcel number\r\n",
-    "        self.parcel = parcel\r\n",
-    "        \r\n",
-    "        #call from api and return json object\r\n",
-    "        self.api_call = 'http://tools.wprdc.org/property-api/v0/parcels/' + self.parcel\r\n",
-    "        self.parceldata = requests.get(str(self.api_call)).json()\r\n",
-    "        \r\n",
-    "    def printparcel(self):\r\n",
-    "        #test function to ensure class is working\r\n",
-    "        return self.parceldata\r\n",
-    "        \r\n",
-    "    def get_geodata(self):\r\n",
-    "        #dataframe with geo data from pbgh housing api\r\n",
-    "        \r\n",
-    "        if len(self.parceldata['results']) > 0:\r\n",
-    "            \r\n",
-    "            #pass if there is no data\r\n",
-    "            if len(self.parceldata['results'][0]['data']['centroids_and_geo_info']) > 0:\r\n",
-    "\r\n",
-    "                #get geographic characteristics from JSON\r\n",
-    "                geoinfo = self.parceldata['results'][0]['data']['centroids_and_geo_info'][0]\r\n",
-    "\r\n",
-    "                #parse to table structure and write to staging table \r\n",
-    "                geodata = pd.DataFrame([geoinfo.values()],columns = geoinfo.keys())\r\n",
-    "\r\n",
-    "                #add column with parcel id\r\n",
-    "                geodata['PARID'] = self.parcel\r\n",
-    "\r\n",
-    "                geodata.to_sql('allghny_prcls_2021_geodta_stg',if_exists='append',index=False,con=engine)\r\n",
-    "\r\n",
-    "                #write from staging table to live table if the parcel has not already been processed\r\n",
-    "                with engine.connect() as con:\r\n",
-    "                    con.execute('CALL `pbgh_property`.`load_geo_data`();')    \r\n",
-    "\r\n",
-    "            else:\r\n",
-    "                pass\r\n",
-    "            \r\n",
-    "        else:\r\n",
-    "            pass\r\n",
-    "            \r\n",
-    "    def get_assess_data(self):\r\n",
-    "        #assessment table\r\n",
-    "        \r\n",
-    "        if len(self.parceldata['results']) > 0:\r\n",
-    "            \r\n",
-    "            #pass if there is no data\r\n",
-    "            if len(self.parceldata['results'][0]['data']['assessments']) > 0:\r\n",
-    "\r\n",
-    "                #get assessment characteristics from JSON\r\n",
-    "                assessinfo = self.parceldata['results'][0]['data']['assessments'][0]\r\n",
-    "\r\n",
-    "                #parse to table structure and write to staging table \r\n",
-    "                assessdata = pd.DataFrame([assessinfo.values()],columns = assessinfo.keys())\r\n",
-    "\r\n",
-    "                #add column with parcel id\r\n",
-    "                assessdata['PARID'] = self.parcel\r\n",
-    "\r\n",
-    "                assessdata.to_sql('allghny_prcls_2021_assessdta_stg',if_exists='append',index=False,con=engine)\r\n",
-    "\r\n",
-    "                #write from staging table to live table if the parcel has not already been processed\r\n",
-    "                with engine.connect() as con:\r\n",
-    "                    con.execute('CALL `pbgh_property`.`load_assess_data`();')\r\n",
-    "\r\n",
-    "            else:\r\n",
-    "                pass \r\n",
-    "\r\n",
-    "        else:\r\n",
-    "            pass\r\n",
-    "\r\n",
-    "    def get_sales_data(self):\r\n",
-    "        #sales history table\r\n",
-    "\r\n",
-    "        if len(self.parceldata['results']) > 0:\r\n",
-    "        \r\n",
-    "\r\n",
-    "            #pass if there is no sales data\r\n",
-    "            if len(self.parceldata['results'][0]['data']['sales']) > 0:\r\n",
-    "\r\n",
-    "                #get sales data from JSON\r\n",
-    "                salesinfo = self.parceldata['results'][0]['data']['sales'][0]\r\n",
-    "\r\n",
-    "                #parse to table structure and write to staging table \r\n",
-    "                salesdata = pd.DataFrame([salesinfo.values()],columns = salesinfo.keys())\r\n",
-    "\r\n",
-    "                #add column with parcel id\r\n",
-    "                salesdata['PARID'] = self.parcel\r\n",
-    "\r\n",
-    "                salesdata.to_sql('allghny_prcls_2021_salesdta_stg',if_exists='append',index=False,con=engine)\r\n",
-    "\r\n",
-    "                #write from staging table to live table if the parcel has not already been processed\r\n",
-    "                with engine.connect() as con:\r\n",
-    "                    con.execute('CALL `pbgh_property`.`load_sales_data`();')\r\n",
-    "\r\n",
-    "            else:\r\n",
-    "                pass\r\n",
-    "        \r\n",
-    "        else:\r\n",
-    "            pass\r\n"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "class pb_parcel_parser:\n",
+    "    '''\n",
+    "    Class that parses parcel data obtained from the Western Pennsylvania Data Center API\n",
+    "    http://tools.wprdc.org/property-api/\n",
+    "    \n",
+    "    This class will parse the data received in json format and load to a local mysql db.  \n",
+    "    '''    \n",
+    "    \n",
+    "    def __init__(self,parcel):\n",
+    "        #initialize with the parcel number\n",
+    "        self.parcel = parcel\n",
+    "        \n",
+    "        #call from api and return json object\n",
+    "        self.api_call = 'http://tools.wprdc.org/property-api/v0/parcels/' + self.parcel\n",
+    "        self.parceldata = requests.get(str(self.api_call)).json()\n",
+    "        \n",
+    "    def printparcel(self):\n",
+    "        #test function to ensure class is working\n",
+    "        return self.parceldata\n",
+    "        \n",
+    "    def get_geodata(self):\n",
+    "        #dataframe with geo data from pbgh housing api\n",
+    "        \n",
+    "        if len(self.parceldata['results']) > 0:\n",
+    "            \n",
+    "            #pass if there is no data\n",
+    "            if len(self.parceldata['results'][0]['data']['centroids_and_geo_info']) > 0:\n",
+    "\n",
+    "                #get geographic characteristics from JSON\n",
+    "                geoinfo = self.parceldata['results'][0]['data']['centroids_and_geo_info'][0]\n",
+    "\n",
+    "                #parse to table structure and write to staging table \n",
+    "                geodata = pd.DataFrame([geoinfo.values()],columns = geoinfo.keys())\n",
+    "\n",
+    "                #add column with parcel id\n",
+    "                geodata['PARID'] = self.parcel\n",
+    "\n",
+    "                geodata.to_sql('allghny_prcls_2021_geodta_stg',if_exists='append',index=False,con=engine)\n",
+    "\n",
+    "                #write from staging table to live table if the parcel has not already been processed\n",
+    "                with engine.connect() as con:\n",
+    "                    con.execute('CALL `pbgh_property`.`load_geo_data`();')    \n",
+    "\n",
+    "            else:\n",
+    "                pass\n",
+    "            \n",
+    "        else:\n",
+    "            pass\n",
+    "            \n",
+    "    def get_assess_data(self):\n",
+    "        #assessment table\n",
+    "        \n",
+    "        if len(self.parceldata['results']) > 0:\n",
+    "            \n",
+    "            #pass if there is no data\n",
+    "            if len(self.parceldata['results'][0]['data']['assessments']) > 0:\n",
+    "\n",
+    "                #get assessment characteristics from JSON\n",
+    "                assessinfo = self.parceldata['results'][0]['data']['assessments'][0]\n",
+    "\n",
+    "                #parse to table structure and write to staging table \n",
+    "                assessdata = pd.DataFrame([assessinfo.values()],columns = assessinfo.keys())\n",
+    "\n",
+    "                #add column with parcel id\n",
+    "                assessdata['PARID'] = self.parcel\n",
+    "\n",
+    "                assessdata.to_sql('allghny_prcls_2021_assessdta_stg',if_exists='append',index=False,con=engine)\n",
+    "\n",
+    "                #write from staging table to live table if the parcel has not already been processed\n",
+    "                with engine.connect() as con:\n",
+    "                    con.execute('CALL `pbgh_property`.`load_assess_data`();')\n",
+    "\n",
+    "            else:\n",
+    "                pass \n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "    def get_sales_data(self):\n",
+    "        #sales history table\n",
+    "\n",
+    "        if len(self.parceldata['results']) > 0:\n",
+    "        \n",
+    "\n",
+    "            #pass if there is no sales data\n",
+    "            if len(self.parceldata['results'][0]['data']['sales']) > 0:\n",
+    "\n",
+    "                #get sales data from JSON\n",
+    "                salesinfo = self.parceldata['results'][0]['data']['sales'][0]\n",
+    "\n",
+    "                #parse to table structure and write to staging table \n",
+    "                salesdata = pd.DataFrame([salesinfo.values()],columns = salesinfo.keys())\n",
+    "\n",
+    "                #add column with parcel id\n",
+    "                salesdata['PARID'] = self.parcel\n",
+    "\n",
+    "                salesdata.to_sql('allghny_prcls_2021_salesdta_stg',if_exists='append',index=False,con=engine)\n",
+    "\n",
+    "                #write from staging table to live table if the parcel has not already been processed\n",
+    "                with engine.connect() as con:\n",
+    "                    con.execute('CALL `pbgh_property`.`load_sales_data`();')\n",
+    "\n",
+    "            else:\n",
+    "                pass\n",
+    "        \n",
+    "        else:\n",
+    "            pass\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "query = \"\"\"\r\n",
-    "SELECT \r\n",
-    "PARID\r\n",
-    "\r\n",
-    "FROM pbgh_property.allegheny_cty_parcels_2021\r\n",
-    "\r\n",
-    "WHERE 1=1\r\n",
-    "AND DATE(CONCAT(RIGHT(SALEDATE,4),'-',LEFT(SALEDATE,2),'-',RIGHT(LEFT(SALEDATE,5),2))) >= '2006-01-01'\r\n",
-    "AND DATE(CONCAT(RIGHT(SALEDATE,4),'-',LEFT(SALEDATE,2),'-',RIGHT(LEFT(SALEDATE,5),2))) < '2018-01-01'\r\n",
-    "AND CLASSDESC = 'RESIDENTIAL';\r\n",
-    "\"\"\"\r\n",
-    "\r\n",
-    "#list of all parcels in Allgheny count\r\n",
+    "query = \"\"\"\n",
+    "SELECT \n",
+    "PARID\n",
+    "\n",
+    "FROM pbgh_property.allegheny_cty_parcels_2021\n",
+    "\n",
+    "WHERE 1=1\n",
+    "AND DATE(CONCAT(RIGHT(SALEDATE,4),'-',LEFT(SALEDATE,2),'-',RIGHT(LEFT(SALEDATE,5),2))) >= '2021-01-01'\n",
+    "#AND DATE(CONCAT(RIGHT(SALEDATE,4),'-',LEFT(SALEDATE,2),'-',RIGHT(LEFT(SALEDATE,5),2))) < '2018-01-01'\n",
+    "AND CLASSDESC = 'RESIDENTIAL';\n",
+    "\"\"\"\n",
+    "\n",
+    "#list of all parcels in Allgheny count\n",
     "parcels = list(pd.read_sql_query(con=engine,sql=query)['PARID'])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28425"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(parcels)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "192425"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "source": [
-    "alrin = \"\"\"\r\n",
-    "Select PARID FROM allghny_prcls_2021_assessdta\r\n",
-    "union\r\n",
-    "Select PARID FROM allghny_prcls_2021_geodta\r\n",
-    "union\r\n",
-    "Select PARID FROM allghny_prcls_2021_salesdta\r\n",
-    "\r\n",
-    "\"\"\"\r\n",
-    "\r\n",
-    "already_in = list(pd.read_sql_query(con=engine,sql=alrin)['PARID'])"
-   ],
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "alrin = \"\"\"\n",
+    "Select PARID FROM allghny_prcls_2021_assessdta\n",
+    "union\n",
+    "Select PARID FROM allghny_prcls_2021_geodta\n",
+    "union\n",
+    "Select PARID FROM allghny_prcls_2021_salesdta\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "already_in = list(pd.read_sql_query(con=engine,sql=alrin)['PARID'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "source": [
-    "len(set(parcels) - set(already_in))\r\n"
-   ],
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "18365"
+       "0"
       ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "execution_count": 24
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "len(set(parcels) - set(already_in))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "297929"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(already_in)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "278033"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "source": [
-    "#call class functions on all county parcels which have not been captured\r\n",
-    "#in the database already\r\n",
-    "alrin = \"\"\"\r\n",
-    "Select PARID FROM allghny_prcls_2021_assessdta\r\n",
-    "union\r\n",
-    "Select PARID FROM allghny_prcls_2021_geodta\r\n",
-    "union\r\n",
-    "Select PARID FROM allghny_prcls_2021_salesdta\r\n",
-    "\r\n",
-    "\"\"\"\r\n",
-    "\r\n",
-    "already_in = list(pd.read_sql_query(con=engine,sql=alrin)['PARID'])\r\n",
-    "\r\n",
-    "for parcel in set(parcels) - set(already_in):\r\n",
-    "    \r\n",
-    "    parser = pb_parcel_parser(parcel)\r\n",
-    "    \r\n",
-    "    if parser:\r\n",
-    "        parser.get_geodata()\r\n",
-    "        parser.get_assess_data()\r\n",
-    "        parser.get_sales_data()"
-   ],
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#call class functions on all county parcels which have not been captured\n",
+    "#in the database already\n",
+    "alrin = \"\"\"\n",
+    "Select PARID FROM allghny_prcls_2021_assessdta\n",
+    "union\n",
+    "Select PARID FROM allghny_prcls_2021_geodta\n",
+    "union\n",
+    "Select PARID FROM allghny_prcls_2021_salesdta\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "already_in = list(pd.read_sql_query(con=engine,sql=alrin)['PARID'])\n",
+    "\n",
+    "for parcel in set(parcels) - set(already_in):\n",
+    "    \n",
+    "    parser = pb_parcel_parser(parcel)\n",
+    "    \n",
+    "    if parser:\n",
+    "        parser.get_geodata()\n",
+    "        parser.get_assess_data()\n",
+    "        parser.get_sales_data()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "source": [
-    "#test api call to be used if needed\r\n",
-    "\r\n",
-    "api_call = 'http://tools.wprdc.org/property-api/v0/parcels/0317H00060002300'\r\n",
-    "parceldata = requests.get(str(api_call)).json()"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "#test api call to be used if needed\n",
+    "\n",
+    "api_call = 'http://tools.wprdc.org/property-api/v0/parcels/0317H00060002300'\n",
+    "parceldata = requests.get(str(api_call)).json()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 63,
-   "source": [
-    "parceldata"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'success': True,\n",
@@ -405,24 +402,30 @@
        " 'failed_searches': ['Assessment Appeals']}"
       ]
      },
+     "execution_count": 63,
      "metadata": {},
-     "execution_count": 63
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "parceldata"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a4bd76f36fa07c92d423ad5d1d2cbe0ac2e2f53edb5b0446e053ad16aa699156"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,9 +438,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
-  },
-  "interpreter": {
-   "hash": "a4bd76f36fa07c92d423ad5d1d2cbe0ac2e2f53edb5b0446e053ad16aa699156"
   }
  },
  "nbformat": 4,
