moved parcel parser into a separate module

--- a/pittsburgh_re_api_pull.ipynb
+++ b/pittsburgh_re_api_pull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,18 @@
     "import pandas as pd\n",
     "import sqlalchemy\n",
     "import seaborn as sns\n",
-    "import requests\n",
-    "import json"
+    "import json\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#connection to the open payments in data in mysql\n",
-    "constr = 'mysql+mysqlconnector://root:mysqlroot@localhost:3306/pbgh_property'\n",
+    "constr = 'mysql+mysqlconnector://root:J5wyNz72Jgk2R3@localhost:3306/pbgh_property'\n",
     "engine = sqlalchemy.create_engine(constr,echo=False)"
    ]
   },
@@ -31,118 +31,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class pb_parcel_parser:\n",
-    "    '''\n",
-    "    Class that parses parcel data obtained from the Western Pennsylvania Data Center API\n",
-    "    http://tools.wprdc.org/property-api/\n",
-    "    \n",
-    "    This class will parse the data received in json format and load to a local mysql db.  \n",
-    "    '''    \n",
-    "    \n",
-    "    def __init__(self,parcel):\n",
-    "        #initialize with the parcel number\n",
-    "        self.parcel = parcel\n",
-    "        \n",
-    "        #call from api and return json object\n",
-    "        self.api_call = 'http://tools.wprdc.org/property-api/v0/parcels/' + self.parcel\n",
-    "        self.parceldata = requests.get(str(self.api_call)).json()\n",
-    "        \n",
-    "    def printparcel(self):\n",
-    "        #test function to ensure class is working\n",
-    "        return self.parceldata\n",
-    "        \n",
-    "    def get_geodata(self):\n",
-    "        #dataframe with geo data from pbgh housing api\n",
-    "        \n",
-    "        if len(self.parceldata['results']) > 0:\n",
-    "            \n",
-    "            #pass if there is no data\n",
-    "            if len(self.parceldata['results'][0]['data']['centroids_and_geo_info']) > 0:\n",
-    "\n",
-    "                #get geographic characteristics from JSON\n",
-    "                geoinfo = self.parceldata['results'][0]['data']['centroids_and_geo_info'][0]\n",
-    "\n",
-    "                #parse to table structure and write to staging table \n",
-    "                geodata = pd.DataFrame([geoinfo.values()],columns = geoinfo.keys())\n",
-    "\n",
-    "                #add column with parcel id\n",
-    "                geodata['PARID'] = self.parcel\n",
-    "\n",
-    "                geodata.to_sql('allghny_prcls_2021_geodta_stg',if_exists='append',index=False,con=engine)\n",
-    "\n",
-    "                #write from staging table to live table if the parcel has not already been processed\n",
-    "                with engine.connect() as con:\n",
-    "                    con.execute('CALL `pbgh_property`.`load_geo_data`();')    \n",
-    "\n",
-    "            else:\n",
-    "                pass\n",
-    "            \n",
-    "        else:\n",
-    "            pass\n",
-    "            \n",
-    "    def get_assess_data(self):\n",
-    "        #assessment table\n",
-    "        \n",
-    "        if len(self.parceldata['results']) > 0:\n",
-    "            \n",
-    "            #pass if there is no data\n",
-    "            if len(self.parceldata['results'][0]['data']['assessments']) > 0:\n",
-    "\n",
-    "                #get assessment characteristics from JSON\n",
-    "                assessinfo = self.parceldata['results'][0]['data']['assessments'][0]\n",
-    "\n",
-    "                #parse to table structure and write to staging table \n",
-    "                assessdata = pd.DataFrame([assessinfo.values()],columns = assessinfo.keys())\n",
-    "\n",
-    "                #add column with parcel id\n",
-    "                assessdata['PARID'] = self.parcel\n",
-    "\n",
-    "                assessdata.to_sql('allghny_prcls_2021_assessdta_stg',if_exists='append',index=False,con=engine)\n",
-    "\n",
-    "                #write from staging table to live table if the parcel has not already been processed\n",
-    "                with engine.connect() as con:\n",
-    "                    con.execute('CALL `pbgh_property`.`load_assess_data`();')\n",
-    "\n",
-    "            else:\n",
-    "                pass \n",
-    "\n",
-    "        else:\n",
-    "            pass\n",
-    "\n",
-    "    def get_sales_data(self):\n",
-    "        #sales history table\n",
-    "\n",
-    "        if len(self.parceldata['results']) > 0:\n",
-    "        \n",
-    "\n",
-    "            #pass if there is no sales data\n",
-    "            if len(self.parceldata['results'][0]['data']['sales']) > 0:\n",
-    "\n",
-    "                #get sales data from JSON\n",
-    "                salesinfo = self.parceldata['results'][0]['data']['sales'][0]\n",
-    "\n",
-    "                #parse to table structure and write to staging table \n",
-    "                salesdata = pd.DataFrame([salesinfo.values()],columns = salesinfo.keys())\n",
-    "\n",
-    "                #add column with parcel id\n",
-    "                salesdata['PARID'] = self.parcel\n",
-    "\n",
-    "                salesdata.to_sql('allghny_prcls_2021_salesdta_stg',if_exists='append',index=False,con=engine)\n",
-    "\n",
-    "                #write from staging table to live table if the parcel has not already been processed\n",
-    "                with engine.connect() as con:\n",
-    "                    con.execute('CALL `pbgh_property`.`load_sales_data`();')\n",
-    "\n",
-    "            else:\n",
-    "                pass\n",
-    "        \n",
-    "        else:\n",
-    "            pass\n"
+    "sys.path.append(\"../parcel_class.py\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from parcel_class import pb_parcel_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "parcel_class.pb_parcel_parser"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pb_parcel_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28425"
+       "34468"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +143,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "297929"
+       "303952"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
